force-app/main/default/objects/Garbage_Collection_Job__mdt/Garbage_Collection_Job__mdt.object-meta.xml
<CustomObject>
    <description>Each record will create a batch class to delete records of the specified SObjectType</description>
    <label>Garbage Collection Job</label>
    <pluralLabel>Garbage Collection Jobs</pluralLabel>
</CustomObject>