force-app/main/default/objects/Garbage_Collection_Job__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>The name of an apex class which can be used to dynamically retrieve a Database.QueryLocator, or a List&lt;SObject&gt;
This allows for more complex SOQL queries that couldn&apos;t otherwise be done in the MDT itself
This class must have a public zero-arg constructor, and implement the IGarbageCollector interface</description>
    <inlineHelpText>This class must have a public zero-arg constructor, and implement the IGarbageCollector interface</inlineHelpText>
    <label>Apex Class Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>