force-app/main/default/objects/Garbage_Collection_Job__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The number of records to be deleted per Database.Batchable execute() call</description>
    <label>Batch Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>