force-app/main/default/objects/Garbage_Collection_Job__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>A unique priority value for all Garbage Collection Jobs.</description>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>