force-app/main/default/objects/Garbage_Collection_Job__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <label>SObjectType</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Garbage_Collection_Jobs</relationshipLabel>
    <relationshipName>Garbage_Collection_Jobs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>