force-app/main/default/objects/Garbage_Collection_Job__mdt/fields/SOQL_Filter__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Filter__c</fullName>
    <description>Sets the WHERE clause for the Garbage Collector batch&apos;s QueryLocator
For more complex filtering, consider referencing an GarbageCollector instance in the &quot;Apex Class Name&quot; field instaed.</description>
    <inlineHelpText>Format: &quot;SELECT Id FROM SObject WHERE ({Your input here})&quot;
ex. &quot;IsClosed = true AND CreatedDate &gt; LAST_N_DAYS:365&quot;</inlineHelpText>
    <label>SOQL Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>