force-app/main/default/objects/Garbage_Collection_Job__mdt/validationRules/FilterMechanismRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>FilterMechanismRequired</fullName>
    <active>true</active>
    <description>Users must specify a mechanism to filter records to be deleted.
Either the name of an apex class which extends the GarbageCollector abstract class, or a SOQL Filter must be provided.</description>
    <errorConditionFormula>AND(
    ISBLANK(Apex_Class_Name__c),
    ISBLANK(SOQL_Filter__c)
)</errorConditionFormula>
    <errorMessage>One of &apos;Apex Class Name&apos; or &apos;SOQL Filter&apos; is required</errorMessage>
</ValidationRule>